--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -8,6 +8,7 @@
         {% if app.user %}
             <a href="{{ path('cart_index') }}">View Cart</a>
             <a href="{{ path('app_logout') }}">Logout</a>
+            <a href="{{ path('add_balance') }}">Add Balance</a>
         {% else %}
             <a href="{{ path('app_login') }}">Login</a>
             <a href="{{ path('app_register') }}">Register</a>
