--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,30 +13,58 @@
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-
+    <div class="top">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
+    <div class="textEmail">
+    <label for="inputEmail" style="margin: 10px;">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    </div><br>
+    <div class="textPassword">
+    <label for="inputPassword" style="margin: 10px;">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
+    </div><br>
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-lg btn-primary" type="submit" style="padding: 10px;">
         Sign in
     </button>
+  </div>
 </form>
+    <style>
+        .top{
+            text-align: center;
+        }
+        h1 {
+
+            font-size: 40px;
+            color: #ffffff;
+            padding: 10px;
+            font-style: italic;
+        }
+        body {
+            background-color: #2c698d;
+        }
+        button {
+            background-color: #bae8e8;
+            color:     #2c698d;
+            padding: 10px;
+            font-size: 20px;
+            border-radius: 12px;
+            border: none;
+        }
+        label[for="inputEmail"] {
+            font-size: 30px;
+            margin-right: 10px;
+            color: white;
+            font-style: italic;
+
+        }
+        label[for="inputPassword"] {
+            font-size: 30px;
+            margin-right: 10px;
+            color: white;
+            font-style: italic;
+        }
+    </style>
 {% endblock %}
