--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -4,49 +4,105 @@
     <h1>Currency List</h1>
 
     {# Navigation Buttons #}
-    <div>
+    <div class="top">
         {% if app.user %}
             <a href="{{ path('cart_index') }}">View Cart</a>
             <a href="{{ path('app_logout') }}">Logout</a>
+            <a href="{{ path('add_balance') }}">Add Balance</a>
+            <a href="{{ path('cart_index') }}">Cart</a>
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('admin') }}">Admin Dashboard</a>
+            {% endif %}
+            {% if app.user.balance > 0 %}
+                    {{ app.user.balance/100 }}
+                {% else %}
+                    {{ app.user.balance }}
+            {% endif %}
         {% else %}
             <a href="{{ path('app_login') }}">Login</a>
             <a href="{{ path('app_register') }}">Register</a>
         {% endif %}
     </div>
-
+<div class="table">
     <table>
+
         <thead>
         <tr>
-            <th>{{ 'currency.name'|trans }}</th>
-            <th>{{ 'currency.code'|trans }}</th>
-            <th>{{ 'currency.exchange_rate'|trans }}</th>
-            <th>{{ 'currency.change'|trans }}</th>
-            <th>Action</th>
+            <th class="table-divider">{{ 'currency.name'|trans }}</th>
+            <th class="table-divider">{{ 'currency.code'|trans }}</th>
+            <th class="table-divider">{{ 'currency.exchange_rate'|trans }}</th>
+            <th class="table-divider">{{ 'currency.change'|trans }}</th>
+            <th class="table-divider">Action</th>
         </tr>
         </thead>
         <tbody>
         {% for currency in currencies %}
-            <tr>
-                <td>{{ currency.name }}</td>
-                <td>{{ currency.currencyCode }}</td>
-                <td>{{ currency.exchangeRate / 100 }}</td>
-                {% if currency.yesterdayExchangeRate < currency.exchangeRate %}
-                    <td style="background: lightgreen">{{ (currency.exchangeRate - currency.yesterdayExchangeRate) / 100 }}</td>
-                {% elseif currency.yesterdayExchangeRate > currency.exchangeRate %}
-                    <td style="background: lightcoral">{{ (currency.exchangeRate - currency.yesterdayExchangeRate) / 100 }}</td>
-                {% else %}
-                    <td>0</td>
-                {% endif %}
-                <td>
-                    {% if app.user %}
-                        <form action="{{ path('cart_add', {'currencyId': currency.id}) }}" method="post">
-                            <input type="number" name="quantity" min="1" max="100" value="1">
-                            <button type="submit">Add to Cart</button>
-                        </form>
+            {% if currency.exchangeRate != 0 %}
+                <tr class="table-divider">
+                    <td>{{ currency.name }}</td>
+                    <td>{{ currency.currencyCode }}</td>
+                    <td>{{ currency.exchangeRate / 100 }}</td>
+                    {% if currency.yesterdayExchangeRate < currency.exchangeRate %}
+                        <td style="background: #bae8e8;">{{ (currency.exchangeRate - currency.yesterdayExchangeRate) / 100 }}</td>
+                    {% elseif currency.yesterdayExchangeRate > currency.exchangeRate %}
+                        <td style="background: #e3f6f5">{{ (currency.exchangeRate - currency.yesterdayExchangeRate) / 100 }}</td>
+                    {% else %}
+                        <td>0</td>
                     {% endif %}
-                </td>
-            </tr>
+                    <td>
+                        {% if app.user %}
+                            <form action="{{ path('cart_add', {'currencyId': currency.id}) }}" method="post">
+                                <input type="number" name="quantity" min="1" max="100" value="1">
+                                <button type="submit">Add to Cart</button>
+                            </form>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endif %}
         {% endfor %}
         </tbody>
     </table>
+</div>
+    <style>
+        h1 {
+            font-size: 50px;
+            color: #272643;
+            text-align: center;
+        }
+        body {
+            background-color: #2c698d;
+        }
+        a {
+            text-decoration: none;
+            color: #ffffff;
+            font-size: 30px;
+            text-align: center;
+            padding: 5px;
+        }
+        tbody {
+            background-color: #e3f6f5;
+        }
+        thead {
+            background-color: #5796bb ;
+        }
+        .table-divider {
+            border-bottom: 1px solid #272643;
+            font-size: 20px;
+            padding: 10px;
+        }
+        .table{
+            background-color: #e3f6f5 ;
+            width: 43%;
+        }
+
+        td {
+            text-align: center;
+            font-size: 20px;
+            padding: 10px;
+        }
+        .top{
+            text-align: center;
+        }
+    </style>
 {% endblock %}
+
